--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 <div id="button-div">
     <button type="button" id="get_problem" class="btn btn-danger">Get New Problem</button>
-    <button type="button" id="solve_problem" class="btn btn-success">Solve Problem</button>
+    <button type="button" id="solve_problem" class="btn btn-success">Solve It
+    </button>
 </div>
 
 
